# telegam_telethon

./: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 20260317_000001_init.py
data/sessions/: session_0fe042bbce.session  session_14ee6802a3.session  session_34afde9421.session  session_3aad1be353.session  session_3dde274b86.session  session_57f9c71c34.session  session_81d548bdbc.session  session_9982a6f64c.session  session_b55afc8621.session  session_cc2b9f6040.session  session_dd763a0b2b.session
telegram_api_server/: main.py
telegram_api_server/api/: routes.py
telegram_api_server/core/: auth.py  config.py  errors.py  logging.py  metrics.py
telegram_api_server/db/: session.py
telegram_api_server/models/: __init__.py  enums.py  location_log.py  telegram_account.py  telegram_app.py
telegram_api_server/runtime/: session_manager.py
telegram_api_server/schemas/: __init__.py  auth.py  common.py  location.py  messages.py
telegram_api_server/services/: account_service.py  file_fetcher.py  location_service.py  message_service.py  update_mapper.py  webhook_dispatcher.py
telegram_api_server/utils/: crypto.py
tests/contracts/: test_auth.py  test_coordinates.py
