[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-api-server"
version = "0.1.0"
description = "Python rewrite of Telegram API Server Management"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn[standard]==0.35.0",
  "sqlalchemy==2.0.43",
  "alembic==1.16.4",
  "aiomysql==0.2.0",
  "pymysql==1.1.1",
  "httpx==0.28.1",
  "telethon @ git+https://github.com/LonamiWebs/Telethon.git@dab6bc4d4fc0c7815f6f19c6f643d9f75d2d930c",
  "pydantic==2.11.7",
  "pydantic-settings==2.10.1",
  "python-multipart==0.0.20",
  "python-json-logger==3.3.0",
  "cryptography==45.0.6",
  "prometheus-client==0.22.1",
  "tenacity==9.1.2"
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.1",
  "pytest-asyncio==1.1.0",
  "pytest-cov==6.2.1",
  "ruff==0.12.10"
]

[tool.setuptools.packages.find]
include = ["telegram_api_server*"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
